--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -93,7 +93,7 @@
 }
 #dropdown-menu-e .nav .link,
 #dropdown-menu-e .dropdown-item {
-  font-size: 1em;
+  font-size: 1.2em;
   color: #ffffff;
 }
 #dropdown-menu-e .navbar,
@@ -114,7 +114,7 @@
 }
 #header1-v H1 {
   text-align: left;
-  color: #7b9ca6;
+  color: #b9a0ce;
 }
 #header1-v P {
   text-align: right;
@@ -125,6 +125,20 @@
   font-size: 15px;
 }
 #content4-x P {
+  text-align: left;
+}
+#content5-1w .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
+}
+#content5-1w .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-1w .mbr-article {
+  color: #fff;
+}
+#content5-1w .mbr-article P {
   text-align: center;
 }
 
@@ -141,7 +155,7 @@
 }
 #dropdown-menu-g .nav .link,
 #dropdown-menu-g .dropdown-item {
-  font-size: 1em;
+  font-size: 1.2em;
   color: #ffffff;
 }
 #dropdown-menu-g .navbar,
@@ -345,57 +359,4 @@
 }
 #content5-1w .mbr-article {
   color: #fff;
-}
-
-
-#dropdown-menu-1m .hide-buttons [data-button] {
-  display: none !important;
-}
-#dropdown-menu-1m .navbar-brand a {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-}
-#dropdown-menu-1m .nav .link,
-#dropdown-menu-1m .dropdown-item {
-  font-size: 1.2em;
-  color: #ffffff;
-}
-#dropdown-menu-1m .navbar,
-#dropdown-menu-1m .dropdown-menu {
-  background: #333333;
-}
-#dropdown-menu-1m .dropdown-menu .dropdown-toggle[aria-expanded="true"],
-#dropdown-menu-1m .dropdown-menu a:hover,
-#dropdown-menu-1m .dropdown-menu a:focus {
-  background: #292929;
-}
-#dropdown-menu-1m .navbar-toggler {
-  color: #ffffff;
-}
-#dropdown-menu-1m A {
-  font-size: 18px;
-  font-family: 'Open Sans', sans-serif;
-}
-#msg-box5-1r .mbr-header__text {
-  color: #ffffff;
-}
-#msg-box5-1r .mbr-header__subtext {
-  color: #ffffff;
-}
-#msg-box5-1r .mbr-article {
-  color: #ffffff;
-}
-#content5-1t .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-1t .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-1t .mbr-article {
-  color: #fff;
-}
-#header1-1q H1 {
-  color: #ffffff;
 }
